# docker-jenkins-slaves

./: Dockerfile  README.md  bash_aliases  libfreenect2-0.2.0-std_bind.patch  ros_entrypoint.sh  sonar-scanner.properties
android-slave/: Dockerfile  sonar-scanner.properties
angular-cli-slave/: Dockerfile
atlassian-slave/: Dockerfile  sonar-scannner.properties
cplusplus-slave/: Dockerfile  install_ros.sh
golang-slave/: Dockerfile
java-slave/: Dockerfile  id_rsa  known_hosts
node-slave/: Dockerfile
php-slave/: Dockerfile
python-slave/: Dockerfile
ros-gazebo-demo/: README.txt
ros-gazebo-demo/src/collision-ros2/: CMakeLists.txt  package.xml
ros-gazebo-demo/src/collision-ros2/src/: CollidePluginRos.cpp  CollidePluginRos.hpp  ModelPushRos.cpp
ros-gazebo-demo/src/collision-ros2/world/: model_push.world
scala-slave/: Dockerfile  sonar-scanner.properties
